fix VmDialog Overflow

--- a/src/functions/vmDialog/main.styl
+++ b/src/functions/vmDialog/main.styl
@@ -44,6 +44,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  overflow: auto;
   left: 100px;
   top: 100px;
   left: 0px;
@@ -56,7 +57,7 @@
   .vm-dialog-dark
     width: 100%;
     background: rgba(0, 0, 0, 0.4);
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     height: 100%;
